--- a/src/server_manager/ui_components/outline-region-picker-step.html
+++ b/src/server_manager/ui_components/outline-region-picker-step.html
@@ -57,6 +57,7 @@
         border-radius: 4px;
       }
       input[type="radio"]:disabled+label.city-button {
+        /* TODO(alalama): make it look good and indicate disabled */
         filter: blur(2px);
       }
       .city-name {
@@ -70,9 +71,6 @@
         color: #fff;
         text-align: center;
         font-size: 14px;
-      }
-      paper-button[disabled] {
-        color: var(--medium-gray);
       }
       .flag {
         width: 86px;
