--- a/src/server_manager/ui_components/outline-step-view.html
+++ b/src/server_manager/ui_components/outline-step-view.html
@@ -22,7 +22,7 @@
         display: block;
       }
       .step-container {
-        padding: 64px 24px 24px;
+        padding: 36px 24px 24px;
         vertical-align: middle;
         height: auto;
         text-align: left;
@@ -34,6 +34,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        margin-bottom: 36px;
       }
       .step-text {
         flex: 2;
