--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -160,7 +160,7 @@
 
     <outline-step-view>
       <span slot="step-title">Choose a cloud service, set up Outline.</span>
-      <span slot="step-description">Don't have a server? Create an account<br/> with DigitalOcean.</span>
+      <span slot="step-description">Don't have a server? Create an account with DigitalOcean.</span>
 
       <div class="container">
         <div id="digital-ocean" class="card" on-tap="connectToDigitalOceanTapped">
