--- a/src/server_manager/ui_components/outline-region-picker-step.html
+++ b/src/server_manager/ui_components/outline-region-picker-step.html
@@ -91,7 +91,7 @@
     </style>
       <outline-step-view display-action>
         <span slot="step-title">Select the location of your server.</span>
-        <span slot="step-description">This is where your internet experience<br/> will come from.</span>
+        <span slot="step-description">This is where your internet experience will come from.</span>
         <span slot="step-action">
           <paper-button id="createServerButton" on-tap='handleCreateServerTap' disabled$='[[!isCreateButtonEnabled(creatingServer, selectedCityId)]]'>Set up Outline</paper-button>
         </span>
