--- a/src/server_manager/ui_components/outline-server-progress-step.html
+++ b/src/server_manager/ui_components/outline-server-progress-step.html
@@ -61,7 +61,7 @@
 
     <outline-step-view display-action>
       <span slot="step-title">Setting up Outline.</span>
-      <span slot="step-description">This could take up to two minutes.<br/>You can destroy this server at anytime.</span>
+      <span slot="step-description">This could take up to two minutes. You can destroy this server at anytime.</span>
       <span slot="step-action">
         <paper-button id='cancelButton' hidden$='{{!showCancelButton}}' on-tap='handleCancelTapped'>Cancel</paper-button>
       </span>
