--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -255,6 +255,9 @@
       .digital-ocean-icon {
         opacity: 0.54;
       }
+      .flex-1 {
+        flex: 1;
+      }
     </style>
 
     <div class="container">
