--- a/src/server_manager/ui_components/outline-step-view.html
+++ b/src/server_manager/ui_components/outline-step-view.html
@@ -47,6 +47,7 @@
       }
       .step-description {
         color: var(--medium-gray);
+        max-width: 40ch;
       }
       .step-action {
         display: flex;
