--- a/src/server_manager/ui_components/outline-do-oauth-step.html
+++ b/src/server_manager/ui_components/outline-do-oauth-step.html
@@ -72,7 +72,7 @@
     <iron-pages id='pages' attr-for-selected='id' selected='{{ currentPage }}'>
       <outline-step-view id="connectAccount">
         <span slot="step-title">Sign in or create an account with DigitalOcean.</span>
-        <span slot="step-description">With your account, Outline makes it easy to<br/> create a server and get connected.</span>
+        <span slot="step-description">With your account, Outline makes it easy to create a server and get connected.</span>
         <paper-card class="card">
           <div class="container">
             <img src="images/digital_ocean_logo.svg" />
@@ -84,7 +84,7 @@
 
       <outline-step-view id="verifyEmail">
         <span slot="step-title">Activate you DigitalOcean account.</span>
-        <span slot="step-description">Check your inbox for an email from DigitalOcean,<br/> and click the link in it to confirm your account.</span>
+        <span slot="step-description">Check your inbox for an email from DigitalOcean, and click the link in it to confirm your account.</span>
         <paper-card class="card">
           <div class="container">
             <img src="images/do_oauth_email.svg" />
@@ -96,7 +96,7 @@
 
       <outline-step-view id="enterBilling">
         <span slot="step-title">Activate you DigitalOcean account.</span>
-        <span slot="step-description">Enter your billing information on digitalocean.com<br/> and return to the app once you are done.</span>
+        <span slot="step-description">Enter your billing information on digitalocean.com and return to the app once you are done.</span>
         <paper-card class="card">
           <div class="container">
             <img src="images/do_oauth_billing.svg" />
@@ -108,7 +108,7 @@
 
       <outline-step-view id="accountActive">
         <span slot="step-title">Activate you DigitalOcean account.</span>
-        <span slot="step-description">Your DigitalOcean account has been activated.<br/><br/></span>
+        <span slot="step-description">Your DigitalOcean account has been activated.</span>
         <paper-card class="card">
           <div class="container">
             <img src="images/do_oauth_done.svg" />
